Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>My TiddlyWiki — a non-linear personal web notebook</title>
+<title>Transfo From Scratch — Transfo From Scratch</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -153,6 +153,10 @@ Error message and password prompt
 
 <li>$:/isEncrypted</li>
 
+<li>$:/SiteSubtitle</li>
+
+<li>$:/SiteTitle</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
@@ -184,6 +188,8 @@ Error message and password prompt
 {"created":"20221105172021752","title":"$:/GitHub/Repo","text":"thyshimrod/transfofromscratch","modified":"20221105172026271"},
 {"created":"20221105171956489","title":"$:/GitHub/Username","text":"thyshimrod","modified":"20221105171959037"},
 {"title":"$:/isEncrypted","text":"no"},
+{"created":"20221105172651855","title":"$:/SiteSubtitle","text":"Transfo From Scratch","modified":"20221105172651855"},
+{"created":"20221105172643105","title":"$:/SiteTitle","text":"Transfo From Scratch","modified":"20221105172647306"},
 {"created":"20221105171914852","title":"$:/state/tab-1749438307","text":"$:/core/ui/ControlPanel/Saving","modified":"20221105171950278"},
 {"created":"20221105171952742","title":"$:/state/tab-2065006209","text":"$:/core/ui/ControlPanel/Saving/GitHub","modified":"20221105171952742"},
 {"title":"$:/status/RequireReloadDueToPluginChange","text":"no"},
