Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ Error message and password prompt
 {"created":"20221116145251570","title":"$:/state/palettemanager/$:/palettes/Shimrod/wikilist-background","text":"show","modified":"20221116145251572"},
 {"created":"20221116142846260","text":"no","title":"$:/state/palettemanager/showexternal","modified":"20221116142854452"},
 {"created":"20221116142710064","title":"$:/state/ShowPaletteEditor","text":"yes","modified":"20221116142710064"},
-{"created":"20221105173105647","title":"$:/state/sidebar","text":"no","modified":"20221128141647642"},
+{"created":"20221105173105647","title":"$:/state/sidebar","text":"yes","modified":"20221212140005578"},
 {"created":"20221106103130843","title":"$:/state/tab--1963855381","text":"$:/core/ui/ControlPanel/Palette","modified":"20221116142656198"},
 {"created":"20221105171914852","title":"$:/state/tab-1749438307","text":"$:/core/ui/ControlPanel/Appearance","modified":"20221116142648628"},
 {"created":"20221105171952742","title":"$:/state/tab-2065006209","text":"$:/core/ui/ControlPanel/Saving/GitHub","modified":"20221105171952742"},
